# typeCase

./: CMakeLists.txt  CMakePresets.json  README.md  installer.sh  makefile
UI/: CMakeLists.txt  main.cpp  qml.qrc
UI/parameter_models/: AlgorithmModel.cpp  AlgorithmModel.hpp  AllData.cpp  AllData.hpp  AvailableAlgorithmModel.cpp  AvailableAlgorithmModel.hpp  DetectorModel.cpp  DetectorModel.hpp  MaterialModel.cpp  MaterialModel.hpp  RunModel.cpp  RunModel.hpp  ShapeModel.cpp  ShapeModel.hpp  ValuesModel.cpp  ValuesModel.hpp
UI/qml/: AlgorithmDelegate.qml  Algorithms.qml  BeamtimeDelegate.qml  BeamtimeDisplay.qml  Database.qml  DetectorDelegate.qml  HomeForm.ui.qml  Material.qml  MaterialDelegate.qml  RunDelegate.qml  RunDisplay.qml  Setup.qml  ShapeDelegate.qml  ShapeDisplay.qml  Shapes.qml  main.qml  qml.qrc
analyser/: CMakeLists.txt  makefile
analyser/include/: tofAnalysis_t.h
analyser/src/: tofAnalysis_algorithm_t.cpp  tofAnalysis_consts_t.cpp  tofAnalysis_data_t.cpp  tofAnalysis_inits_t.cpp  tofAnalysis_shapes_t.cpp  tofAnalysis_t.cpp
basic/: CMakeLists.txt  makefile
basic/include/: AReactionRecognition.h  RbaseReaction.h  algorithm.h  eLossAlgorithm.h  fitAlgorithm.h  logger.h
basic/src/: AReactionRecognition.cpp  RbaseReaction.cpp  algorithm.cpp  eLossAlgorithm.cpp  fitAlgorithm.cpp  getReaction.cpp  logger.cpp
cl-typeCase/: CMakeLists.txt  makefile
cl-typeCase/include/: loggingClass.h
cl-typeCase/src/: analysis.cpp
code/: CMakeLists.txt  makefile
code/include/: algorithmwriter.h  shapewriter.h
code/src/: algorithmwriter.cpp  shapewriter.cpp
container/: CMakeLists.txt  makefile
container/include/: CommonCalibrationParser.h  TBase.h  calibHit.h  cluster.h  container.h  container_utilities.h  detector.h  event.h  eventpainter.h  hitCluster.h  material.h  pixel.h  rawHit.h  setup.h  track.h
container/src/: CommonCalibrationParser.cpp  TBase.cpp  calibHit.cpp  cluster.cpp  container_utilities.cpp  detector.cpp  event.cpp  hitCluster.cpp  material.cpp  pixel.cpp  rawHit.cpp  setup.cpp  track.cpp
documentation/: CMakeLists.txt  Doxyfile.in  makefile  typecase.dox  types.data
documentation/include/: doc_classes.h  doc_display.h  doc_selectclassesdialog.h  doc_update_dialog.h  documentation_mw.h  tmyclass.h
documentation/src/: doc_classes.cpp  doc_classes.ui.h  doc_display.cpp  doc_display.ui.h  doc_selectclassesdialog.cpp  doc_selectclassesdialog.ui.h  doc_update_dialog.cpp  documentation_mw.cpp  documentation_mw.ui.h  functionnametypedoc.cpp  main.cpp  nametypedoc.cpp  qmake_image_collection.cpp  tmyclass.cpp  utils.cpp
eventpainter/: CMakeLists.txt  makefile
eventpainter/include/: eventpainter.h
eventpainter/src/: eventpainter.cpp
factories/: CMakeLists.txt
factories/include/: algorithmFactory.h  shapeFactory.h
factories/src/: algorithmFactory.cpp  shapeFactory.cpp
factories/tests/: CMakeLists.txt  algorithmFactoryTest.cpp  shapeFactoryTest.cpp
fit/: CMakeLists.txt  makefile
fit/include/: fittingRoutines.h
fit/src/: kinfit.cpp  lineFit.cpp  vertexFit.cpp
geometry/: CMakeLists.txt  makefile
geometry/include/: Eparticles.h  definitions.h  geometry.h  geometry_detail.h  geometry_new.h  string_utilities.h
geometry/src/: Eparticles.cpp  LU_Decomposition.cpp  Momentum4D.cpp  Point.cpp  Point2D.cpp  Point3D.cpp  Point4D.cpp  Vector.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp  geomObj.cpp  lLine2D.cpp  lLine3D.cpp  matrix3D.cpp  matrixNxM.cpp  matrix_decomposition.c  matrix_inversion.c  plane3D.cpp  projector.cpp  sLine2D.cpp  sLine3D.cpp  string_utilities.cpp
geometry/tests/: CMakeLists.txt  geometryTest.cpp  performanceTest.cpp
parameter/: CMakeLists.txt  makefile
parameter/include/: algorithmparameter.h  baseparameter.h  beamtimeparameter.h  detectorparameter.h  materialparameter.h  paintparameter.h  parameterManager.h  shapeparameter.h  valuesparameter.h
parameter/src/: algorithmparameter.cpp  baseparameter.cpp  beamtimeparameter.cpp  detectorparameter.cpp  materialparameter.cpp  paintparameter.cpp  parameterManager.cpp  shapeparameter.cpp  valuesparameter.cpp  versions0.h  versions1.h  versions3.h  versions5.h
parameterIO/: CMakeLists.txt
parameterIO/include/: baseparameterreader.h  baseparameterwriter.h  jsonparameterreader.h  jsonparameterwriter.h  parameterio.h  parameterreader0.h  parameterreader1.h  parameterreader2.h  parameterwriter0.h  parameterwriter1.h  parameterwriter2.h  versions.h
parameterIO/src/: jsonKeys.h  jsonparameterreader.cpp  jsonparameterwriter.cpp  parameterio.cpp  parameterio_setup.cpp  parameterreader0.cpp  parameterreader1.cpp  parameterreader2.cpp  parameterwriter0.cpp  parameterwriter1.cpp  parameterwriter2.cpp
parameterIO/tests/: CMakeLists.txt  algorithmIO_test.cpp  beamtimeIO_0_test.cpp  databaseIO_test.cpp  detectorIO_test.cpp  fixture.cpp  fixture.h  jsonIO_test.cpp  materialIO_0_test.cpp  runIO_0_test.cpp  setupIO_test.cpp  shapeIO_test.cpp  testingUtilities.cpp
reaction/: CMakeLists.txt  makefile
reaction/include/: Rpp_dpi+.h  Rpp_pkl_pkppi.h  Rppelastic.h  RthreeParticleDecay.h  RtwoParticleDecay.h  reactions.h
reaction/src/: Rpp_dpi+.cpp  Rpp_pkl_pkppi.cpp  Rppelastic.cpp  RthreeParticleDecay.cpp  RtwoParticleDecay.cpp
shapes/: CMakeLists.txt  makefile
shapes/include/: baseShape.h  circle.h  cylinder.h  fiber.h  hexPrism.h  planarShapes.h  planeShape.h  provideShapes.h  quadrangle.h  ring.h  shape_utilities.h  shapes.h  sphericRectangle.h  spiral.h  strawTube.h  volumeShape.h  wedge.h
shapes/src/: baseShape.cpp  circle.cpp  cylinder.cpp  fiber.cpp  getShape.cpp  hexPrism.cpp  hexagon.cpp  planeShape.cpp  provideShapes.cpp  quadrangle.cpp  rectangle.cpp  ring.cpp  shape_utilities.cpp  sphericRectangle.cpp  sphericTriangle.cpp  spiral.cpp  strawTube.cpp  triangle.cpp  volumeShape.cpp  wedge.cpp
shapes/tests/: CMakeLists.txt  circleTest.cpp  cylinderTest.cpp  fiberTest.cpp  hexPrismTest.cpp  hexagonTest.cpp  providerTest.cpp  quadrangleTest.cpp  rectangleTest.cpp  ringTest.cpp  sphericRectangleTest.cpp  sphericTriangleTest.cpp  spiralTest.cpp  (+4 more)
(+611 files in other folders)
