tc_add_library(libshapebasic
  HEADERS
    include/volumeShape.h
    include/planeShape.h
    include/baseShape.h
  SOURCES
    src/baseShape.cpp
    src/planeShape.cpp
    src/volumeShape.cpp
  PUBLIC_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  DEPENDS
    TypeCase::Geometry
    TypeCase::Parameter
  ALIAS TypeCase::ShapeBase
)
tc_add_library(libshape
  HEADERS
    include/shapes.h
    include/ring.h
    include/hexPrism.h
    include/sphericRectangle.h
    include/shape_utilities.h
    include/planarShapes.h
    include/spiral.h
    include/circle.h
    include/fiber.h
    include/strawTube.h
    include/cylinder.h
    include/quadrangle.h
    include/wedge.h
    include/provideShapes.h
  SOURCES
    src/provideShapes.cpp
    src/cylinder.cpp
    src/getShape.cpp
    src/hexPrism.cpp
    src/quadrangle.cpp
    src/ring.cpp
    src/sphericRectangle.cpp
    src/spiral.cpp
    src/triangle.cpp
    src/wedge.cpp
    src/circle.cpp
    src/fiber.cpp
    src/hexagon.cpp
    src/rectangle.cpp
    src/shape_utilities.cpp
    src/sphericTriangle.cpp
    src/strawTube.cpp
  PUBLIC_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  DEPENDS
    PUBLIC TypeCase::ShapeBase
    PUBLIC TypeCase::Factory
  ALIAS TypeCase::Shape
)

add_subdirectory(tests)
